--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ Eco-luxury living.
       </div>
     </section>
       <section class="about" id="about">
-        <div class="container">
+        <div class="containermap">
 
          
             <img src="https://media.discordapp.net/attachments/783383778562801675/1210995151279759390/Group_327.png?ex=65ec961f&is=65da211f&hm=40142fd30a74a08073bdd63f9c161bd61ffab927afae6101f8e6392c7b268647&=&format=webp&quality=lossless&width=1428&height=714" alt="House interior">
@@ -878,7 +878,7 @@ market
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./assets/images/property-1.jpg" alt="New Apartment Nice View" class="w-100">
+                    <img src="https://media.discordapp.net/attachments/783383778562801675/1210993401386770522/image.png?ex=65ec947e&is=65da1f7e&hm=a2068d145db05f6959cc1fb36f9393f482e4510386483a3461e79f8c36f6979f&=&format=webp&quality=lossless&width=895&height=714" alt="New Apartment Nice View" class="w-100">
                   </a>
 
                   <div class="card-badge green">For Rent</div>
@@ -888,7 +888,7 @@ market
                     <button class="banner-actions-btn">
                       <ion-icon name="location"></ion-icon>
 
-                      <address>Belmont Gardens, Chicago</address>
+                      <address>Belmont Gardens, Bengaluru</address>
                     </button>
 <!-- 
                     <button class="banner-actions-btn">
@@ -996,7 +996,7 @@ market
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./assets/images/property-2.jpg" alt="Modern Apartments" class="w-100">
+                    <img src="https://media.discordapp.net/attachments/783383778562801675/1210995823404523580/image.png?ex=65ec96bf&is=65da21bf&hm=936cfe2b82d6d4a27dbccca2379292034df93a711c523a7a18a2bc16685beda5&=&format=webp&quality=lossless&width=895&height=714" alt="Modern Apartments" class="w-100">
                   </a>
 
                   <div class="card-badge orange">For Sales</div>
@@ -1006,7 +1006,7 @@ market
                     <button class="banner-actions-btn">
                       <ion-icon name="location"></ion-icon>
 
-                      <address>Belmont Gardens, Chicago</address>
+                      <address>Supreme Gardens, Gurguntapalya</address>
                     </button>
 
                     <!-- <button class="banner-actions-btn">
@@ -1114,7 +1114,7 @@ market
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./assets/images/property-3.jpg" alt="Comfortable Apartment" class="w-100">
+                    <img src="https://media.discordapp.net/attachments/783383778562801675/1211408310734028870/NB_-_Brochure.pdf_-_Page_14_of_20.png?ex=65ee16e8&is=65dba1e8&hm=1310615632acaf44ab936a83df808bbe2a744ca0c43c7d6c26102020ed771852&=&format=webp&quality=lossless&width=671&height=671" alt="Comfortable Apartment" class="w-100">
                   </a>
 
                   <div class="card-badge green">For Rent</div>
@@ -1124,7 +1124,7 @@ market
                     <button class="banner-actions-btn">
                       <ion-icon name="location"></ion-icon>
 
-                      <address>Belmont Gardens, Chicago</address>
+                      <address>Jayamahal Extention, Bangalore</address>
                     </button>
 <!-- 
                     <button class="banner-actions-btn">
@@ -1232,7 +1232,7 @@ market
                 <figure class="card-banner">
 
                   <a href="#">
-                    <img src="./assets/images/property-4.png" alt="Luxury villa in Rego Park" class="w-100">
+                    <img src="./assets/images/property-3.jpg" alt="Luxury villa in Rego Park" class="w-100">
                   </a>
 
                   <div class="card-badge green">For Rent</div>
@@ -1242,7 +1242,7 @@ market
                     <button class="banner-actions-btn">
                       <ion-icon name="location"></ion-icon>
 
-                      <address>Belmont Gardens, Chicago</address>
+                      <address>Belmont Gardens, Whitefield</address>
                     </button>
 
                     <!-- <button class="banner-actions-btn">
@@ -1707,7 +1707,7 @@ market
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <img src="./assets/images/logo-nb.png"  height="90" width="260" alt="Homeverse logo">
+            <img src="./assets/images/logo-bn.png"  height="90" width="260" alt="Homeverse logo">
           </a>
 
           <!-- <p class="section-text">
