--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@ market
                 </h3>
 
                 <p class="card-text">
-                 We Introduce an innovative concept of eco-luxury living within plotted developments. This approach combines luxury with sustainability, offering a lifestyle that values sophistication alongside environmental stewardship. The community is designed to minimize ecological impact, featuring villas, gardens, and communal spaces that are harmoniously integrated with lush greenery and sustainable practices.
+                 We have Introduce an innovative concept of eco-luxury living within plotted developments at Northern Boulvard. This approach combines luxury with sustainability, Eco-living and offering a lifestyle that values sophistication alongside environmental stewardship. The community is designed to minimize ecological impact, featuring villas, gardens, and communal spaces that are harmoniously integrated with lush greenery and sustainable practices.
                 </p>
 
                 <a href="#" class="card-link">
