--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ Eco-luxury living.
 
             <li class="about-item">
               <div class="about-item-icon">
-                <ion-icon name="wine-outline"></ion-icon>
+                <ion-icon name="home-outline"></ion-icon>
               </div>
 
               <p class="about-item-text"><b>Sanitary Network</b> <br>Well connected and functional
@@ -477,7 +477,7 @@ Eco-luxury living.
 
             <li class="about-item">
               <div class="about-item-icon">
-                <ion-icon name="wine-outline"></ion-icon>
+                <ion-icon name="shield-checkmark-outline"></ion-icon>
               </div>
 
               <p class="about-item-text"><b>Sewage Treatment Plants</b> <br>Adequate sewage treatment facilities
