--- a/index.html
+++ b/index.html
@@ -1247,7 +1247,7 @@ market
                 <ion-icon name="location-outline"></ion-icon>
 
                 <address>#196, 1st Floor, Nandidurga Road, Jayamahal
-                  Extention, Bangalore - 560046</address>
+                  Extention, Bengaluru - 560046</address>
               </a>
             </li>
 
