--- a/index.html
+++ b/index.html
@@ -1213,7 +1213,7 @@ market
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
         <input type="text" name="phone" placeholder="Your Phone No" required>
-        <textarea name="message" placeholder="Your Message" required></textarea>
+        <input type="text" name="message" placeholder="Your Message" required>
 
         <button type="submit" class="btn">Submit</button>
       </form>
