--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,7 @@ market
         </div>
 
         <div class="footer-link-box">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3883.2305381485894!2d77.61144329999999!3d13.273528899999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bb1e052e4fc0b45%3A0x5ee5384377ee8782!2sDuddanahalli%20Rd%2C%20Chinnakempanahalli%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1709727783015!5m2!1sen!2sin" width="550" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe class="responsive-map"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3883.2305381485894!2d77.61144329999999!3d13.273528899999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bb1e052e4fc0b45%3A0x5ee5384377ee8782!2sDuddanahalli%20Rd%2C%20Chinnakempanahalli%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1709727783015!5m2!1sen!2sin" width="550" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           <!-- <ul class="footer-list">
            
   
