--- a/index.html
+++ b/index.html
@@ -206,8 +206,10 @@
             <h2 class="h1 hero-title">Find Your Eco-Luxury Villas</h2>
 
             <p class="hero-text">
-              #196, 1st Floor, Nandidurga Road, Jayamahal
-              Extention, Bangalore - 560046
+              STRR road, Near Devanahalli DC office.
+              Beside Amity University
+              Devanahalli
+              Bangalore 562110
             </p>
 <a href="#contact-us">
             <button class="btn">Make An Enquiry</button>
@@ -1250,8 +1252,10 @@ market
               <a href="https://maps.app.goo.gl/AfBooA1Fs9fyosns8" class="contact-link">
                 <ion-icon name="location-outline"></ion-icon>
 
-                <address>#196, 1st Floor, Nandidurga Road, Jayamahal
-                  Extention, Bengaluru - 560046</address>
+                <address>STRR road, Near Devanahalli DC office.
+                  Beside Amity University
+                  Devanahalli
+                  Bangalore 562110</address>
               </a>
             </li>
 
