--- a/index.html
+++ b/index.html
@@ -1266,12 +1266,11 @@ market
                 <span>+919986138530</span>
               </a>
             </li>
-
             <li>
-              <a href="www.northernboulevard.com" class="contact-link">
-                <ion-icon name="mail-outline"></ion-icon>
+              <a href="https://wa.me/+919591932400" class="contact-link">
+                <ion-icon name="chatbubbles"></ion-icon>
 
-                <span>www.northernboulevard.com</span>
+                <span>+919591932400</span>
               </a>
             </li>
 
