--- a/index.html
+++ b/index.html
@@ -1239,7 +1239,7 @@ market
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <img src="./assets/images/logo-nb.png"  height="90" width="260" alt="Homeverse logo">
+            <img src="./assets/images/logo-bn.png"  height="90" width="260" alt="Homeverse logo">
           </a>
 
           <!-- <p class="section-text">
